Added a human check

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@ I love hearing from reader of Money for Something. If you have a questions, have
     <textarea name="message" rows="8"></textarea>
   </p>
   <p>
+    <label>Human? What is 8 minus 3?:</label>
+    <input name="math">
+  </p>
+  <p>
     <button name="submit">Send</button>
   </p>
 </form>
