Update contact form

--- a/contact.html
+++ b/contact.html
@@ -6,24 +6,4 @@ permalink: /contact/
 
 I love hearing from reader of Money for Something. If you have a questions, have noticed a correction that needs to be made, or want to just say hello, don’t hesitate to write.
 
-<form action="https://butler.dafacto.com/m4s.php" method="POST">
-  <p>
-    <label>Name:</label>
-    <input name="name">
-  </p>
-  <p>
-    <label>Email address:</label>
-    <input name="email">
-  </p>
-  <p>
-    <label>Your message:</label>
-    <textarea name="message" rows="8"></textarea>
-  </p>
-  <p>
-    <label>Human? What is 8 minus 3?:</label>
-    <input name="math">
-  </p>
-  <p>
-    <button name="submit">Send</button>
-  </p>
-</form>
+Unfortunately, I had to disable the feedback form that previously existed here, due to too many spam emails. If you would like to contact me, you can do so through the <a href="https://dafacto.com/contact/">contact form at my personal website</a>.
